--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   </head>
   <body dir="rtl">
     <header class="header">
+      <div class="header__ham-icon">
+        <button class="header__ham-icon--btn ham--icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
       <div class="header__logo">
         <a href="/" class="header__logo--link">
           <img src="img\Layer_1.png" alt="Logo" class="header__logo--logo" />
@@ -22,19 +29,25 @@
       <nav class="header__nav">
         <ul class="header__nav__items">
           <li class="header__nav__items--item">
-            <a href="" class="header__nav__items--item--link">خدمات</a>
+            <a href="" class="header__nav__items--item--link nav-link">خدمات</a>
           </li>
           <li class="header__nav__items--item">
-            <a href="" class="header__nav__items--item--link">نمونه کار</a>
+            <a href="" class="header__nav__items--item--link nav-link"
+              >نمونه کار</a
+            >
           </li>
           <li class="header__nav__items--item">
-            <a href="" class="header__nav__items--item--link">درباره ما</a>
+            <a href="" class="header__nav__items--item--link nav-link"
+              >درباره ما</a
+            >
           </li>
           <li class="header__nav__items--item">
-            <a href="" class="header__nav__items--item--link">بلاگ</a>
+            <a href="" class="header__nav__items--item--link nav-link">بلاگ</a>
           </li>
           <li class="header__nav__items--item">
-            <a href="" class="header__nav__items--item--link">امورمشتریان</a>
+            <a href="" class="header__nav__items--item--link nav-link"
+              >امورمشتریان</a
+            >
           </li>
         </ul>
       </nav>
@@ -50,5 +63,25 @@
         >
       </div>
     </header>
+    <aside class="aside">
+      <ul class="aside__items">
+        <li class="aside__item">
+          <a href="" class="aside__item--link">ورود کاربر</a>
+        </li>
+        <li class="aside__item">
+          <a href="" class="aside__item--link">خدمات</a>
+        </li>
+        <li class="aside__item">
+          <a href="" class="aside__item--link">نمونه کار</a>
+        </li>
+        <li class="aside__item">
+          <a href="" class="aside__item--link">درباره ما</a>
+        </li>
+        <li class="aside__item">
+          <a href="" class="aside__item--link">امورمشتریان</a>
+        </li>
+      </ul>
+    </aside>
+    <script src="app\script.js"></script>
   </body>
 </html>
