added mobile nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body dir="rtl">
     <header class="header">
       <div class="header__ham-icon">
-        <button class="header__ham-icon--btn ham--icon">
+        <button class="header__ham-icon--btn ham--icon openNav">
           <span></span>
           <span></span>
           <span></span>
@@ -64,21 +64,29 @@
       </div>
     </header>
     <aside class="aside">
+      <button class="aside__close closeNav">
+        <i class="fa fa-arrow-circle-right"></i>
+      </button>
       <ul class="aside__items">
-        <li class="aside__item">
-          <a href="" class="aside__item--link">ورود کاربر</a>
+        <li class="aside__items__item">
+          <a href="" class="aside__items__item--link aside-link"
+            ><i class="fa fa-angle-left"></i> خدمات</a
+          >
         </li>
-        <li class="aside__item">
-          <a href="" class="aside__item--link">خدمات</a>
+        <li class="aside__items__item">
+          <a href="" class="aside__items__item--link aside-link"
+            ><i class="fa fa-angle-left"></i> نمونه کار</a
+          >
         </li>
-        <li class="aside__item">
-          <a href="" class="aside__item--link">نمونه کار</a>
+        <li class="aside__items__item">
+          <a href="" class="aside__items__item--link aside-link"
+            ><i class="fa fa-angle-left"></i> درباره ما</a
+          >
         </li>
-        <li class="aside__item">
-          <a href="" class="aside__item--link">درباره ما</a>
-        </li>
-        <li class="aside__item">
-          <a href="" class="aside__item--link">امورمشتریان</a>
+        <li class="aside__items__item">
+          <a href="" class="aside__items__item--link aside-link"
+            ><i class="fa fa-angle-left"></i> امورمشتریان</a
+          >
         </li>
       </ul>
     </aside>
