finished mobile nav

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         >
       </div>
     </header>
+
     <aside class="aside">
       <button class="aside__close closeNav">
         <i class="fa fa-arrow-circle-right"></i>
@@ -90,6 +91,7 @@
         </li>
       </ul>
     </aside>
+    <section class="aside-background"></section>
     <script src="app\script.js"></script>
   </body>
 </html>
