--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="راف کات طرحی نو در تبلیغات" />
+    <meta name="author" content="Shahin-Seraj" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -92,6 +94,7 @@
       </ul>
     </aside>
     <section class="aside-background"></section>
+    <main></main>
     <script src="app\script.js"></script>
   </body>
 </html>
