--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
         >
       </div>
     </header>
-
     <aside class="aside">
       <button class="aside__close closeNav">
         <i class="fa fa-arrow-circle-right"></i>
@@ -95,6 +94,146 @@
     </aside>
     <section class="aside-background"></section>
     <main></main>
+    <footer class="footer">
+      <div class="footer__list">
+        <ul class="list__items">
+          <li class="list__items__item">
+            <h3 class="list__items__item__title footer-list-title">خدمات ما</h3>
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              تصویر برداری</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              صدابرداری</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              نورپردازی</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >پکیج های
+            </a>
+          </li>
+        </ul>
+        <ul class="list__items">
+          <li class="list__items__item">
+            <h3 class="list__items__item__title footer-list-title">گالری</h3>
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              تبلیغاتی
+            </a>
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              صنعتی</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link">
+              سنتی</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >موزیک ویدیو
+            </a>
+          </li>
+        </ul>
+        <ul class="list__items">
+          <li class="list__items__item">
+            <h3 class="list__items__item__title footer-list-title">مشتریان</h3>
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >پشتیبانی و مشاوره</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >سوالات متداول</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >بلاگ</a
+            >
+          </li>
+        </ul>
+        <ul class="list__items">
+          <li class="list__items__item">
+            <h3 class="list__items__item__title footer-list-title">
+              درباره ما
+            </h3>
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >اهداف ما</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >تیم راف کات</a
+            >
+          </li>
+          <li class="list__items__item">
+            <a href="#" class="list__items__item__text footer-list-link"
+              >ارتباط با راف کات</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="footer__wrapper">
+        <div class="footer__wrapper__social">
+          <p class="footer__wrapper__social--paragraph">
+            مارا در شبکه های مجازی دنبال کنید
+          </p>
+          <ul class="footer__wrapper__social__items">
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__wrapper__social__items__item--links"
+              >
+                <i class="fa fa-facebook-square"></i
+              ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href=""
+                class="footer__wrapper__social__items__item--links"
+              ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href=""
+                class="footer__wrapper__social__items__item--links"
+              ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href=""
+                class="footer__wrapper__social__items__item--links"
+              ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href=""
+                class="footer__wrapper__social__items__item--links"
+              ></a>
+            </li>
+          </ul>
+          <p class="footer__wrapper--slogan">
+            تمامی حقوق مادی و معنوی مطعلق به شرکت خلق هنر ایرانیان است
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="app\script.js"></script>
   </body>
 </html>
