--- a/index.html
+++ b/index.html
@@ -191,47 +191,64 @@
       </div>
       <div class="footer__wrapper">
         <div class="footer__wrapper__social">
-          <p class="footer__wrapper__social--paragraph">
-            مارا در شبکه های مجازی دنبال کنید
-          </p>
+          <h3 class="footer__wrapper__social--paragraph footer-list-title">
+            ما را در شبکه های مجازی دنبال کنید
+          </h3>
           <ul class="footer__wrapper__social__items">
             <li class="footer__wrapper__social__items__item">
               <a
                 href="https://www.facebook.com/"
                 class="footer__wrapper__social__items__item--links"
+                title="Facebook"
               >
-                <i class="fa fa-facebook-square"></i
+                <i
+                  class="fa fa-facebook-square social-btn social-btn--white"
+                ></i
               ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href="https://www.twitter.com/"
+                class="footer__wrapper__social__items__item--links"
+                title="Twitter"
+              >
+                <i class="fa fa-twitter social-btn social-btn--white"></i>
+              </a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__wrapper__social__items__item--links"
+                title="Instagram"
+              >
+                <i class="fa fa-instagram social-btn social-btn--white"></i
+              ></a>
+            </li>
+            <li class="footer__wrapper__social__items__item">
+              <a
+                href="https://www.youtube.com"
+                class="footer__wrapper__social__items__item--links"
+                title="YouTube"
+              >
+                <i class="fa fa-youtube social-btn social-btn--white"></i>
+              </a>
             </li>
             <li class="footer__wrapper__social__items__item">
               <a
                 href=""
                 class="footer__wrapper__social__items__item--links"
-              ></a>
-            </li>
-            <li class="footer__wrapper__social__items__item">
-              <a
-                href=""
-                class="footer__wrapper__social__items__item--links"
-              ></a>
-            </li>
-            <li class="footer__wrapper__social__items__item">
-              <a
-                href=""
-                class="footer__wrapper__social__items__item--links"
-              ></a>
-            </li>
-            <li class="footer__wrapper__social__items__item">
-              <a
-                href=""
-                class="footer__wrapper__social__items__item--links"
-              ></a>
+                title="linkdin"
+              >
+                <i
+                  class="fa fa-linkedin-square social-btn social-btn--white"
+                ></i>
+              </a>
             </li>
           </ul>
-          <p class="footer__wrapper--slogan">
-            تمامی حقوق مادی و معنوی مطعلق به شرکت خلق هنر ایرانیان است
-          </p>
         </div>
+        <p class="footer__wrapper--slogan">
+          تمامی حقوق مادی و معنوی مطعلق به شرکت خلق هنر ایرانیان است
+        </p>
       </div>
     </footer>
     <script src="app\script.js"></script>
