added footer btn

--- a/index.html
+++ b/index.html
@@ -93,8 +93,18 @@
       </ul>
     </aside>
     <section class="aside-background"></section>
-    <main></main>
+    <main>
+      <section id="first"></section>
+    </main>
     <footer class="footer">
+      <div class="footer__btn">
+        <a href="#first" class="to-the-top--btn">
+          <i class="fa fa-arrow-circle-up top-btn"></i>
+        </a>
+        <button class="dark-mod--btn">
+          <i class="fa fa-moon-o"></i>
+        </button>
+      </div>
       <div class="footer__list">
         <ul class="list__items">
           <li class="list__items__item">
