--- a/index.html
+++ b/index.html
@@ -94,7 +94,17 @@
     </aside>
     <section class="aside-background"></section>
     <main>
-      <section id="first"></section>
+      <section id="first" class="main-grid-1 container">
+        <div class="main-grid-1__layaout-1">
+          <h1
+            class="main-grid-1__layaout-1--title grid-title grid-title--purple"
+          >
+            !به دست حرفه ای ها بسپر
+          </h1>
+          <p class="main-grid-1__layaout-1--title grid-title"></p>
+        </div>
+        <div class="main-grid-1__layaout-2"></div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__btn">
