--- a/index.html
+++ b/index.html
@@ -99,11 +99,71 @@
           <h1
             class="main-grid-1__layaout-1--title grid-title grid-title--purple"
           >
-            !به دست حرفه ای ها بسپر
+            به دست حرفه ای ها بسپار!
           </h1>
-          <p class="main-grid-1__layaout-1--title grid-title"></p>
+          <p class="main-grid-1__layaout-1--text grid-text u-margin-top">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+            استفاده <br />
+            از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و
+            سطرآنچنان که لازم است <br />
+            و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
+            ابزارهای کاربردی می باشد. <br />
+            کتابهای زیادی در شصت و سه درصد گذشته
+          </p>
+          <p class="main-grid-1__layaout-1--text grid-text u-margin-top">
+            ما را در شبکه های اجتماعی دنبال کنید
+          </p>
+          <div class="main-grid-1__layaout-1--box u-margin-top">
+            <a
+              href="https://www.facebook.com/"
+              class="main-grid-1__layaout-1--box--link"
+              title="Facebook"
+            >
+              <i class="fa fa-facebook-square social-btn social-btn--purple"></i
+            ></a>
+
+            <a
+              href="https://www.twitter.com/"
+              class="main-grid-1__layaout-1--box--link"
+              title="Twitter"
+            >
+              <i class="fa fa-twitter social-btn social-btn--purple"></i>
+            </a>
+
+            <a
+              href="https://www.instagram.com/"
+              class="main-grid-1__layaout-1--box--link"
+              title="Instagram"
+            >
+              <i class="fa fa-instagram social-btn social-btn--purple"></i
+            ></a>
+
+            <a
+              href="https://www.youtube.com"
+              class="main-grid-1__layaout-1--box--link"
+              title="YouTube"
+            >
+              <i class="fa fa-youtube social-btn social-btn--purple"></i>
+            </a>
+
+            <a
+              href="https://www.linkdin.com/"
+              class="main-grid-1__layaout-1--box--link"
+              title="linkdin"
+            >
+              <i
+                class="fa fa-linkedin-square social-btn social-btn--purple"
+              ></i>
+            </a>
+          </div>
         </div>
-        <div class="main-grid-1__layaout-2"></div>
+        <div class="main-grid-1__layaout-2">
+          <img
+            src="img/landin-content/cam-1.png"
+            alt="Camera "
+            class="main-grid-1__layout-2--image"
+          />
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -267,7 +327,7 @@
           </ul>
         </div>
         <p class="footer__wrapper--slogan">
-          تمامی حقوق مادی و معنوی مطعلق به شرکت خلق هنر ایرانیان است
+          تمامی حقوق مادی و معنوی متعلق به شرکت خلق هنر ایرانیان است
         </p>
       </div>
     </footer>
