added main grids

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
     </aside>
     <section class="aside-background"></section>
     <main>
-      <section id="first" class="main-grid-1 container">
+      <section class="display-fixer" style="opacity: 0" id="first">
+        By Shahin
+      </section>
+      <section class="main-grid-1 container">
         <div class="main-grid-1__layaout-1">
           <h1
             class="main-grid-1__layaout-1--title grid-title grid-title--purple"
@@ -103,12 +106,10 @@
           </h1>
           <p class="main-grid-1__layaout-1--text grid-text u-margin-top">
             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-            استفاده <br />
-            از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و
-            سطرآنچنان که لازم است <br />
-            و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود
-            ابزارهای کاربردی می باشد. <br />
-            کتابهای زیادی در شصت و سه درصد گذشته
+            استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
+            ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
+            در شصت و سه درصد گذشته
           </p>
           <p class="main-grid-1__layaout-1--text grid-text u-margin-top">
             ما را در شبکه های اجتماعی دنبال کنید
@@ -163,6 +164,22 @@
             alt="Camera "
             class="main-grid-1__layout-2--image"
           />
+        </div>
+      </section>
+      <section class="main-grid-2 container">
+        <div class="main-grid-2__layout-3">
+          <h3 class="main-grid-2__layout-3--title grid-title grid-title--red">
+            چرا راف کات؟
+          </h3>
+          <p class="main-grid-2__layout-3--text grid-text">
+            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+            استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
+            ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+          </p>
+        </div>
+        <div class="main-grid-2__layout-4">
+          <img src="img/landin-content/people.png" alt="people" />
         </div>
       </section>
     </main>
