--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="shortcut icon" href="img\favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="fonts/B_Yekan/font.css" />
     <link rel="stylesheet" href="css\landing.css" />
     <title>راف کات</title>
   </head>
